<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic2"
    android:orientation="vertical"
    android:padding="80dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="serif-monospace"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/textViewC203"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="serif"

        android:text="@string/mod1"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/textViewC206"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="serif"
        android:text="@string/mod2"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/textViewC218"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="serif"
        android:text="@string/mod3"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/textViewC235"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="serif"
        android:text="@string/mod4"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/textViewC346"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="serif"
        android:text="@string/mod5"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/textViewG953"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="serif"
        android:text="@string/mod6"
        android:textSize="16sp" />

</LinearLayout>